# Jewels-Game

./: README.md  main.cpp
InterviewExerciseDani.app/Contents/: Info.plist
InterviewExerciseDani.app/Contents/Frameworks/SDL2.framework/Versions/A/: SDL2
InterviewExerciseDani.app/Contents/Frameworks/SDL2_image.framework/Versions/A/: SDL2_image
InterviewExerciseDani.app/Contents/Frameworks/SDL2_image.framework/Versions/A/_CodeSignature/: CodeResources
InterviewExerciseDani.app/Contents/Frameworks/SDL2_ttf.framework/Versions/A/: SDL2_ttf
InterviewExerciseDani.app/Contents/Frameworks/SDL2_ttf.framework/Versions/A/_CodeSignature/: CodeResources
InterviewExerciseDani.app/Contents/MacOS/: InterviewExerciseDani
InterviewExerciseDani.app/Contents/Resources/: AppIcon.icns  Assets.car  CMakeLists.txt  gameBoard.inl
InterviewExerciseDani.app/Contents/_CodeSignature/: CodeResources
assets/scoresHistory.xcdatamodeld/scoresHistory.xcdatamodel/: contents
inc/: clock.hpp  common.hpp  game.hpp  gameBoard.hpp  jewels.hpp
src/: clock.cpp  common.cpp  game.cpp  jewels.cpp
